<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="center|top"
		android:orientation="vertical"
		>

		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="80dp"
			android:text="@string/to_do_list"
			android:textAppearance="@style/WeTextAppearance.Large"
			/>

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginLeft="8dp"
			android:layout_marginTop="40dp"
			android:text="@string/item_description"
			/>

		<EditText
			android:id="@+id/item"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_margin="10dp"
			android:layout_marginTop="40dp"
			android:hint="@string/todoedit_hint"
			/>

		<Button
			android:id="@+id/add_item"
			android:layout_width="match_parent"
			android:layout_height="60dp"
			android:layout_margin="10dp"
			android:text="@string/add_item"
			android:textColor="@android:color/white"
			/>

		<TextView
			android:id="@+id/go_to_list"
			android:layout_width="wrap_content"
			android:layout_marginTop="10dp"
			android:textColor="@color/colorAccent"
			android:layout_height="wrap_content"
			android:text="@string/go_to_item_listing"
			android:textAlignment="center"
			/>

	</LinearLayout>

</layout>

